# psp-plugins

./: Makefile  main.c  missyhud.prx  myhud.prx
reference/: gui.c
src/: CMakeLists.txt
test3/: dvd_logo.prx
